# todo-list

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 73eb4af62e7a_initial_migration.py  9d3952421f6b_update_field_lengths_from_env.py  ec7e39871e84_sync_existing_tables.py
src/todo_list/: api_server.py  config.py  main.py
src/todo_list/api/: __init__.py  main.py  routers.py
src/todo_list/api/controller_schemas/: __init__.py
src/todo_list/api/controller_schemas/requests/: project_requests.py  task_requests.py
src/todo_list/api/controller_schemas/responses/: base_responses.py  project_responses.py  task_responses.py
src/todo_list/api/controllers/: project_controller.py  task_controller.py
src/todo_list/api/dependencies/: __init__.py  database.py  services.py
src/todo_list/cli/: console.py  interface.py
src/todo_list/commands/: __init__.py  autoclose_overdue.py
src/todo_list/core/: entities.py  validators.py
src/todo_list/db/: __init__.py  in_memory_storage.py  session.py
src/todo_list/exceptions/: __init__.py  base.py  repository_exceptions.py  service_exceptions.py
src/todo_list/models/: __init__.py  project.py  task.py
src/todo_list/repositories/: __init__.py  project_repository.py  task_repository.py
src/todo_list/services/: __init__.py  project_service.py  task_service.py
src/todo_list/storage/: in_memory_storage.py
src/todo_list/validators/: base.py
