[project]
name = "todo-list"
version = "0.1.0"
description = "A ToDoList application with Python"
authors = [
    {name = "Sahel Sabeti",email = "sabetisahel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "todo_list", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
